assets/src/settings-page/style.css
#amp-settings {
	max-width: 1060px;
	margin: 0 auto;
}

#amp-settings > h1 {
	font-family: var(--font-poppins);
	font-size: 1.682rem;
	font-weight: 600;
	margin-bottom: 0.55rem;
}

/* Welcome section. */
.settings-welcome {
	margin-bottom: 2.5rem;
}

.settings-welcome p {
	font-size: 14px;
}

.settings-welcome h2 {
	align-items: center;
	display: flex;
	font-size: 1rem;
	margin-bottom: 0;
	margin-top: 0;
}

.settings-welcome h2 svg {
	margin-left: 0.5rem;
}

.settings-welcome .selectable {
	align-items: center;
	display: flex;
	flex-direction: column;
	width: 100%;

	@media (min-width: 783px) {
		flex-direction: row;
	}
}

.settings-welcome__illustration {
	margin-bottom: 2rem;

	@media (min-width: 783px) {
		margin-right: 2rem;
	}
}

.amp .settings-welcome__button.is-primary {
	box-shadow: none;

	@media (min-width: 783px) {
		padding-left: 1rem;
		padding-right: 1.5rem;
	}
}

.amp-settings .theme-card .phone-inner {
	max-height: 298px;
}

/* Supported templates section. */
.supported-templates {
	margin-bottom: 3rem;
	padding: 0 1.5rem;

	@media (min-width: 783px) {
		padding: 0 3rem;
	}
}

.supported-templates h4 {
	font-size: 1rem;
}

.supported-templates p {
	font-size: 14px;
}

.mobile-redirection,
.plugin-suppression {
	margin-bottom: 1rem;
}

.template-modes {
	margin-bottom: 2.5rem;
}

.template-modes .template-mode-option {
	margin-bottom: 0.5rem;
}

.amp.amp-settings .template-mode-option > p {
	font-size: 16px;
	margin-bottom: 1rem;
}

.template-modes > p,
.amp .form-table .amp-suppressed-plugins p {
	font-size: 14px;
}


/* Plugin suppression */
.plugin-suppression > p {
	font-size: 14px;
}


#suppressed-plugins-table {
	margin-top: 20px;
}

#suppressed-plugins-table th {
	font-weight: 400;
}

#suppressed-plugins-table th,
#suppressed-plugins-table td {
	padding: 8px 10px;
}

#suppressed-plugins-table .column-status {
	width: 150px;
}

#suppressed-plugins-table .column-status .components-base-control__field {
	margin-bottom: 0;
}

#suppressed-plugins-table .column-status > select {
	width: 100%;
}

#suppressed-plugins-table .column-plugin {
	width: 45%;
}

#suppressed-plugins-table .column-plugin .plugin-author-uri {
	margin-top: 0;
}

#suppressed-plugins-table .column-details {
	width: 50%;
}

#suppressed-plugins-table .column-details p {
	margin: 0;
}

#suppressed-plugins-table .column-details summary {
	font-weight: bold;
}

#suppressed-plugins-table tbody th,
#suppressed-plugins-table tbody td {
	vertical-align: top;
}

#suppressed-plugins-table tbody tr.has-validation-errors {
	background-color: #fef7f1;
}

#suppressed-plugins-table tbody tr > th.column-status {
	border-left: solid 4px transparent;
}

#suppressed-plugins-table tbody tr.has-validation-errors > th.column-status {
	border-color: #d54e21;
}

#suppressed-plugins-table tbody tr > th,
#suppressed-plugins-table tbody tr > td {
	box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
}

#suppressed-plugins-table details > ul {
	margin-left: 30px;
	margin-top: 0.5em;
	margin-bottom: 0;
	list-style-type: disc;
}

#suppressed-plugins-table summary {
	user-select: none;
	cursor: pointer;
}

#suppressed-plugins-table .plugin-name,
#suppressed-plugins-table .column-details p,
#suppressed-plugins-table .column-details summary {
	line-height: 30px; /* To match .wp-core-ui select */
}

li.error-removed {
	color: var(--color-valid);
}

li.error-kept {
	color: var(--color-invalid);
}

@media screen and (max-width: 782px) {

	#suppressed-plugins-table .plugin-name,
	#suppressed-plugins-table .column-details p,
	#suppressed-plugins-table .column-details summary {
		line-height: 40px; /* To match .wp-core-ui select */
	}

	#suppressed-plugins-table {
		display: table;
	}

	#suppressed-plugins-table th,
	#suppressed-plugins-table td {
		display: table-cell;
	}
}

/* Supported templates. */
#supported_templates_fieldset ul ul {
	margin-left: 40px;
}

.supported-templates__fields {
	display: grid;
	gap: 1.5rem;

	@media (min-width: 783px) {
		grid-template-columns: repeat(2, 1fr);
	}
}

@keyframes slideIn {

	from {
		transform: translate3d(300px, 0, 0);
	}

	to {
		transform: translate3d(0, 0, 0);
	}
}

@keyframes fadeOut {

	from {
		opacity: 1;
	}

	to {
		opacity: 0;
	}
}


.amp .amp-save-success-notice.amp-notice {
	animation: slideIn, fadeOut;
	animation-delay: 0s, 8s;
	animation-duration: 0.5s, 0.5s;
	animation-fill-mode: both;
}

.amp .amp-save-success-notice.amp-notice,
.amp-error-notice .amp-notice {
	bottom: 3rem;
	box-shadow: 0 30px 20px rgba(0, 0, 0, 0.1);
	max-width: 300px;
	padding-right: 3rem;
	position: fixed;
	right: -1rem;
	width: 100%;
	z-index: 99;
}

.amp-error-notice .amp-notice {
	animation: slideIn;
	animation-delay: 0s;
	animation-duration: 0.5s;
	animation-fill-mode: both;
	max-width: 400px;
}

.settings-footer {
	padding-bottom: 2.5rem;
	padding-top: 2.5rem;
}


#template-mode-reader-container {
	margin-bottom: 0;
}

#template-mode-reader-container.selectable.selectable--selected {
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	border-bottom-style: dotted;
	border-bottom-width: 1px;
}

#reader-themes-drawer {
	border-top-left-radius: 0;
	border-top-right-radius: 0;
	border-top-width: 0;
}

#reader-themes-drawer .amp-drawer__heading {
	align-items: center;
	display: flex;
	padding-left: 1.5rem;

	@media (min-width: 783px) {
		padding-left: 3rem;
	}
}

#plugin-suppression-drawer .amp-drawer__panel-body-inner {
	padding: 0 1.5rem 3rem;

	@media (min-width: 783px) {
		padding: 0 3rem 3rem;
	}
}

#plugin-suppression-drawer .amp-drawer__panel-body-inner > p {
	font-size: 14px;
}

